--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
 <!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
+  <title>FRELANCER</title>
+</head>
+<body>
+  <header>
+    <ul>
+      <li class="botton" ><a  class="text-upercase" href="#">start bootstrap</a></li>
+      <li><a class="text-upercase botton1" href="#">portafolio</a></li>
+      <li><a  class="text-upercase botton2" href="#">about</a></li>
+      <li><a class="text-upercase botton3" href="#">contact</a></li>
+    </ul>
+  </header>
+  <section class="contaner">
+    <div class="headerimage"><img src="assets/images/profile.png" alt="Image man"></div>
+    <span class=" titulo text-upercase">start bootstrap</span>
+    <div class="line"><i class="fa fa-star" aria-hidden="true"></i></div>
+    <span class="parrafo">Web developer-Grafic artist- user designer</span>
+  </section>
+  <section>
+      <span class="title2">Portfolio</span>
+      <div class="line black"><i class="fa fa-star" aria-hidden="true"></i></div>
+<div class="contaner2">
+        <div class="imageportfolio "><img src="assets/images/portfolio/cabin.png" alt=""></div>
+        <div class="imageportfolio "><img src="assets/images/portfolio/cake.png" alt=""></div>
+        <div class="imageportfolio "><img src="assets/images/portfolio/circus.png" alt=""></div>
+        <div class="imageportfolio"><img src="assets/images/portfolio/game.png" alt=""></div>
+        <div class="imageportfolio"><img src="assets/images/portfolio/safe.png" alt=""></div>
+        <div class="imageportfolio"><img src="assets/images/portfolio/submarine.png" alt=""></div>
+    </div>
+   </section>
+      <section class="contaner3">
+        <span class="text-upercase title3">about</span>
+        <div class="line"><i class="fa fa-star" aria-hidden="true"></i></div>
+        <div class="contanertext">
+        <span class="parrafo2">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</span>
+        <span class="parrafo2">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</span>
+        </div>
+        <button class="push" type="button" name= " ">
+          <a href="">Donwload theme<i class="fa fa-download" aria-hidden="true"></i></a>
+        </button>
+      </section>
+      <section>
+         <span class="text-upercase contacme">Contact Me</span>
+         <form class="" action="index.html" method="post">
+           <ul>
+            <li class="information"><input type="text" name="Name" placeholder="Name"></li>
+             <li class="information"><input type="text" name="Email Adress" placeholder="Email Adress"></li>
+             <li class="information"><input type="text" name="Phone Number" placeholder="Phone Number"></li>
+            <li class="information"><input type="text" name="Mesage" placeholder="Mesagge"></li>
+           </ul>
+          </form>
+        <button class="email" type="button" name="send">Send</button>
+        </section>
+      <footer>
+        <div class="contanerlast">
+          <div class="block1">
+          <h3 class="text-upercase location">LOCATION</h3>
+          <p>3481 Melrose Place
+          Beverly Hills, CA 90210</p>
+        </div>
+        <div class="block2">
+          <h3 class="text-upercase">AROUND THE WEB</h3>
+          <ul>
+            <li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><ahref="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+          </ul>
+        </div>
+        <div class="block3">
+          <h3 class="text-upercase">about freelancer</h3>
+          <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+        </div>
+        </div>
+        <span class="autor">Copyright Â© Your Website 2017</span>
+    </footer>
+    </body>
+    </html>
